[gd_scene load_steps=9 format=3 uid="uid://b8eoa8usrok3e"]

[ext_resource type="Script" path="res://Scenes/Casino/casino.gd" id="1_4sgjb"]
[ext_resource type="Texture2D" uid="uid://di5pgyor37kst" path="res://Icons/Shop/CoinIcon.png" id="1_ijs1l"]
[ext_resource type="Texture2D" uid="uid://c4oriyl2hva3u" path="res://Icons/Casino/babygamble.png" id="3_yujan"]
[ext_resource type="Texture2D" uid="uid://chxbs328hdum2" path="res://Icons/Casino/standardgamble.png" id="4_tx8va"]
[ext_resource type="Script" path="res://Scenes/Casino/baby_gamble.gd" id="4_xaoll"]
[ext_resource type="Texture2D" uid="uid://dvyhf6rgpnioq" path="res://Icons/Casino/coolergamble.png" id="5_i5meb"]
[ext_resource type="Script" path="res://Scenes/Casino/standard_gamble.gd" id="6_a1vgo"]
[ext_resource type="Script" path="res://Scenes/Casino/cooler_gamble.gd" id="8_n2giw"]

[node name="casino" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-572, -321)
script = ExtResource("1_4sgjb")

[node name="CoinIcon" type="Sprite2D" parent="."]
position = Vector2(-541, 297)
scale = Vector2(0.0894081, 0.087446)
texture = ExtResource("1_ijs1l")
offset = Vector2(26.282, -12.6777)

[node name="CoinCount" type="RichTextLabel" parent="CoinIcon" groups=["coincounters"]]
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.241
anchor_right = 6.357
anchor_bottom = 0.937
offset_left = -350.2
offset_top = -349.7
offset_right = 257.1
offset_bottom = -294.9
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 400
text = "0"
metadata/_edit_use_anchors_ = true

[node name="ResultText" type="Label" parent="."]
visible = false
clip_contents = true
layout_mode = 0
offset_left = -133.0
offset_top = 226.0
offset_right = 160.0
offset_bottom = 272.0
pivot_offset = Vector2(4482, 640)
theme_override_font_sizes/font_size = 33
text = "..."

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 515.0
offset_top = 280.0
offset_right = 570.0
offset_bottom = 316.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Back
"

[node name="BabyGamble" type="Button" parent="." groups=["GambleCooldown"]]
layout_mode = 2
offset_left = -500.0
offset_top = -250.0
offset_right = -340.0
offset_bottom = -90.0
tooltip_text = "Possible Prizes:
1000 coins
1 Mouse Steroid
1 AutoClicker"
icon = ExtResource("3_yujan")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_xaoll")

[node name="ItemName" type="RichTextLabel" parent="BabyGamble"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = -48.0
offset_right = 173.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 34
text = "Baby's first gamble"
fit_content = true

[node name="CoinIcon" type="Sprite2D" parent="BabyGamble"]
position = Vector2(34, 194)
scale = Vector2(0.1, 0.103)
texture = ExtResource("1_ijs1l")

[node name="ItemCost" type="RichTextLabel" parent="BabyGamble/CoinIcon"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.000492466
anchor_right = 3.15714
anchor_bottom = -0.000492466
offset_left = 11.0
offset_top = -213.655
offset_right = 1053.0
offset_bottom = 328.345
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 400
text = "1000"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="StandardGamble" type="Button" parent="." groups=["GambleCooldown"]]
layout_mode = 2
offset_left = -85.0
offset_top = -250.0
offset_right = 75.0
offset_bottom = -90.0
tooltip_text = "Possible Prizes:
10,000 coins
10-15 Mouse Steroids
10-15 AutoClickers
1-3 Gems"
icon = ExtResource("4_tx8va")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_a1vgo")

[node name="ItemName" type="RichTextLabel" parent="StandardGamble"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_top = -50.0
offset_right = 148.0
offset_bottom = -3.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 34
text = "Standard Gamble"
fit_content = true

[node name="CoinIcon" type="Sprite2D" parent="StandardGamble"]
position = Vector2(34, 194)
scale = Vector2(0.1, 0.103)
texture = ExtResource("1_ijs1l")

[node name="ItemCost" type="RichTextLabel" parent="StandardGamble/CoinIcon"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.000492466
anchor_right = 3.15714
anchor_bottom = -0.000492466
offset_left = 11.0
offset_top = -213.655
offset_right = 1053.0
offset_bottom = 328.345
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 400
text = "10,000"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="CoolerGamble" type="Button" parent="." groups=["GambleCooldown"]]
layout_mode = 2
offset_left = 325.0
offset_top = -250.0
offset_right = 485.0
offset_bottom = -90.0
tooltip_text = "Possible Prizes:
100,000 coins
100-150 Mouse Steroids
100-150 AutoClickers
30-50 Gems"
icon = ExtResource("5_i5meb")
icon_alignment = 1
expand_icon = true
script = ExtResource("8_n2giw")

[node name="ItemName" type="RichTextLabel" parent="CoolerGamble"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = -48.0
offset_right = 131.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 34
text = "Cooler Gamble"
fit_content = true

[node name="CoinIcon" type="Sprite2D" parent="CoolerGamble"]
position = Vector2(34, 194)
scale = Vector2(0.1, 0.103)
texture = ExtResource("1_ijs1l")

[node name="ItemCost" type="RichTextLabel" parent="CoolerGamble/CoinIcon"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.000492466
anchor_right = 3.15714
anchor_bottom = -0.000492466
offset_left = 11.0
offset_top = -213.655
offset_right = 1053.0
offset_bottom = 328.345
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 400
text = "100,000"
fit_content = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BabyGamble" to="BabyGamble" method="_on_pressed"]
[connection signal="pressed" from="StandardGamble" to="StandardGamble" method="_on_pressed"]
[connection signal="pressed" from="CoolerGamble" to="CoolerGamble" method="_on_pressed"]
